[package]
name = "yee-crfg"
version = "0.4.0"
authors = ["YeeCo contact@yeefoundation.com"]
edition = "2018"

[dependencies]
fork-tree = { git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94"}
futures = "0.1"
log = "0.4"
parking_lot = "0.7.1"
tokio = "0.1.7"
rand = "0.6"
parity-codec = { version = "3.2", features = ["derive"] }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
consensus_common = { package = "substrate-consensus-common", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
substrate-telemetry = { git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
client = { package = "substrate-client", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94"}
inherents = { package = "substrate-inherents", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
service = {package = "substrate-service", git = "https://github.com/yeeco/substrate.git", optional = true, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
fg_primitives = { package = "crfg-primitives", path = "./primitives" }
grandpa = { package = "finality-grandpa", version = "0.6.0", path = "../finality-grandpa", features = ["derive-codec"] }
srml-crfg = { package = "yee-srml-crfg", path = "../../srml/yee-crfg" }
srml-finality-tracker = { package = "srml-finality-tracker", path = "../../srml/yee-tracker" }
ansi_term = "0.11"
yee-consensus-pow = { path = "../consensus/pow"}
hex = "0.3.1"
lazy_static = "1.2"

[dev-dependencies]
consensus_common = { package = "substrate-consensus-common", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git", features = ["test-helpers"] , rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
keyring = { package = "substrate-keyring", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
test_client = { package = "substrate-test-client", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
env_logger = "0.6"

[features]
default = ["service-integration"]
service-integration = ["service"]
