[package]
name = "yee-primitives"
version = "0.5.0"
authors = ["YeeCo contact@yeefoundation.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
parity-codec = "3.2"

[dev-dependencies]
hex = "0.3.1"
substrate_primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "46b45ca391d0e681e9aff3553fa6d3618bf53ab5" }
