[package]
name = "yee-sr-primitives"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728", default-features = false }
parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728", default-features = false }
substrate-sr-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728", default-features = false }


[features]
default = ["std"]
std = [
    "rstd/std",
	"parity-codec/std",
]
