[package]
name = "util"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = "3.5"
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa" }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "1f109fbe2aed1f422f252c07b268a110170bb7aa", default-features = false }
