[package]
name = "util"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = "3.5"
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94" }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "0fd106881d80818fe2aa6dd5aecf7c0dfa306e94", default-features = false }
