[package]
name = "yee-foreign-network"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3.6"
network-libp2p = { package = "yee-foreign-network-libp2p", path = "../network-libp2p" }
log = "0.4"
parking_lot = "0.7.1"
error-chain = "0.12"
futures = "0.1.17"
linked_hash_set = "0.1.3"
network_libp2p = { package = "yee-foreign-network-libp2p", path = "../network-libp2p" }
peerset = { package = "substrate-peerset", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
tokio = "0.1.11"
bitflags = "1.0"
parity-codec = { version = "3.2", features = ["derive"] }
rustc-hex = "2.0"
regex = "1"
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.24"

[dev-dependencies]
yee-runtime = { path = "../../runtime" }
