[package]
name = "yee-foreign-network"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3.6"
log = "0.4"
parking_lot = "0.7.1"
error-chain = "0.12"
futures = "0.1.17"
linked_hash_set = "0.1.3"
network-libp2p = { package = "yee-foreign-network-libp2p", path = "../network-libp2p" }
vnetwork = { package = "yee-foreign-vnetwork", path = "vnetwork" }
peerset = { package = "substrate-peerset", git = "https://github.com/yeeco/substrate.git", branch = "zzq/foreign-proof" }
primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "zzq/foreign-proof" }
consensus = { package = "substrate-consensus-common", git = "https://github.com/yeeco/substrate.git", branch = "zzq/foreign-proof" }
client = { package = "substrate-client", git = "https://github.com/yeeco/substrate.git", branch = "zzq/foreign-proof" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", branch = "zzq/foreign-proof" }
substrate_service = { package = "substrate-service", git = "https://github.com/yeeco/substrate.git", branch = "zzq/foreign-proof" }
substrate_network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git", branch = "zzq/foreign-proof" }
substrate_transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git", branch = "zzq/foreign-proof" }
tokio = "0.1.11"
bitflags = "1.0"
parity-codec = { version = "3.2", features = ["derive"] }
rustc-hex = "2.0"
regex = "1"
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.24"
merkle-light = { package = "merkle_light", git = "https://github.com/yeeco/merkle_light.git", branch = "zzq/proof" }
yee-merkle = { path = "../../core/merkle" }
ansi_term = "0.11"

[dev-dependencies]
yee-runtime = { path = "../../runtime" }
