[package]
name = "yee-foreign-network"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3.6"
log = "0.4"
parking_lot = "0.7.1"
error-chain = "0.12"
futures = "0.1.17"
linked_hash_set = "0.1.3"
network-libp2p = { package = "yee-foreign-network-libp2p", path = "../network-libp2p" }
vnetwork = { package = "yee-foreign-vnetwork", path = "vnetwork" }
peerset = { package = "substrate-peerset", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
consensus = { package = "substrate-consensus-common", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
client = { package = "substrate-client", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
substrate_service = { package = "substrate-service", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
substrate_network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
substrate_transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
tokio = "0.1.11"
bitflags = "1.0"
parity-codec = { version = "3.2", features = ["derive"] }
rustc-hex = "2.0"
regex = "1"
serde = { version = "1.0.70", features = ["derive"] }
serde_json = "1.0.24"
merkle-light = { package = "merkle_light", git = "https://github.com/yeeco/merkle_light.git", branch = "yee" }
yee-merkle = { git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728", default-features = false }
finality-tracker = { package = "finality-tracker", path = "../../core/finality-tracker" }
ansi_term = "0.11"
rand = "0.6.5"

[dev-dependencies]
yee-runtime = { path = "../../runtime" }

[features]
default = ["std"]
std = [
    "yee-merkle/std"
]