[package]
name = "yee-foreign-relay"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
log = "0.4"
parity-codec = "3.5"
parking_lot = "0.7.1"
tokio = "0.1"
substrate-client = { git = "https://github.com/yeeco/substrate.git", rev = "8fd547f7a1d107ebe20a24e8689afc602036f5ae" }
substrate-service = { git = "https://github.com/yeeco/substrate.git", rev = "8fd547f7a1d107ebe20a24e8689afc602036f5ae" }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", rev = "8fd547f7a1d107ebe20a24e8689afc602036f5ae" }
pool-graph = { package = "substrate-transaction-graph", git = "https://github.com/yeeco/substrate.git", rev = "8fd547f7a1d107ebe20a24e8689afc602036f5ae" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git", rev = "8fd547f7a1d107ebe20a24e8689afc602036f5ae" }
yee-runtime = { package = "yee-runtime", path = "../../runtime" }
yee-balances = { package = "yee-srml-balances", path = "../../srml/yee-balances", default_features = false }
yee-assets = { package = "yee-srml-assets", path = "../../srml/yee-assets", default-features = false }
yee-relay = { package = "yee-srml-relay", path = "../../srml/yee-relay", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
substrate-cli = { git = "https://github.com/yeeco/substrate.git", rev = "8fd547f7a1d107ebe20a24e8689afc602036f5ae" }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "8fd547f7a1d107ebe20a24e8689afc602036f5ae" }
foreign-network = { package = "yee-foreign-network", path = "../network" }
foreign-chain = { package = "yee-foreign-chain", path = "../chain" }
util = { package = "util", path = "../../core/util" }
finality-tracker = { package = "finality-tracker", path = "../../core/finality-tracker" }
ansi_term = "0.11"
yee-primitives = { path = "../../core/primitives" }
yee-merkle = { path = "../../core/util/merkle" }
hash-db = "0.12.4"
