[package]
name = "yee-foreign-relay"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
log = "0.4"
parity-codec = "3.5"
parking_lot = "0.7.1"
tokio = "0.1"
substrate-client = { git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
substrate-service = { git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
pool-graph = { package = "substrate-transaction-graph", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
yee-runtime = { package = "yee-runtime", path = "../../runtime" }
yee-balances = { package = "yee-srml-balances", path = "../../srml/yee-balances", default_features = false }
yee-assets = { package = "yee-srml-assets", path = "../../srml/yee-assets", default-features = false }
yee-relay = { package = "yee-srml-relay", path = "../../srml/yee-relay", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
substrate-cli = { git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728" }
foreign-network = { package = "yee-foreign-network", path = "../network" }
foreign-chain = { package = "yee-foreign-chain", path = "../chain" }
util = { package = "util", path = "../../core/util" }
finality-tracker = { package = "finality-tracker", path = "../../core/finality-tracker" }
ansi_term = "0.11"
yee-primitives = { path = "../../core/primitives" }
yee-merkle = { git = "https://github.com/yeeco/substrate.git", rev = "92524273ee4387871e6b8472136edfc19e03b728", default-features = false }
hash-db = "0.12.4"

[features]
default = ["std"]
std = [
    "yee-merkle/std"
]