[package]
name = "yee-srml-assets"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.2", default-features = false }
primitives = { package = "sr-primitives",  git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
srml-support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22", default-features = false }
sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
sharding = { package = "yee-srml-sharding", path = "../yee-sharding", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }

[dev-dependencies]
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
# sr-std = { git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }
runtime_io = { package = "sr-io",  git = "https://github.com/yeeco/substrate.git", rev = "c705591473bea4a5c22b844eebd1b4065c06bb22" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"primitives/std",
	"srml-support/std",
	"system/std",
	"rstd/std",
	"sharding-primitives/std",
	"sharding/std",
	"yee-sr-primitives/std",
]
