[package]
name = "yee-srml-balances"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
hex = "0.3"
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
substrate-keyring = { git = "https://github.com/yeeco/substrate.git", optional = true, branch = "mn/v1.2" }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default-features = false, branch = "mn/v1.2" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, branch = "mn/v1.2" }
srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, branch = "mn/v1.2" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, branch = "mn/v1.2" }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
sharding = { package = "yee-srml-sharding", path = "../yee-sharding", default-features = false }
pow = { package = "yee-srml-pow", path = "../yee-pow", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }

[dev-dependencies]
runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", branch = "mn/v1.2" }
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", branch = "mn/v1.2" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
	"sharding/std",
	"yee-sharding-primitives/std"
]
