[package]
name = "yee-srml-balances"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
hex = "0.3"
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
substrate-keyring = { git = "https://github.com/yeeco/substrate.git", optional = true, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
rstd = { package = "sr-std", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
srml-support = { git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", default-features = false, rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
yee-sharding-primitives = { package = "yee-sharding-primitives", path = "../../core/sharding/primitives", default-features = false }
sharding = { package = "yee-srml-sharding", path = "../yee-sharding", default-features = false }
pow = { package = "yee-srml-pow", path = "../yee-pow", default-features = false }
yee-sr-primitives = { package = "yee-sr-primitives", path = "../../core/sr-primitives", default-features = false }

[dev-dependencies]
runtime_io = { package = "sr-io", git = "https://github.com/yeeco/substrate.git", rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }
substrate-primitives = { git = "https://github.com/yeeco/substrate.git", rev = "baf15ee6faee628d0f0760dfead706779402bbd8" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
	"sharding/std",
	"yee-sharding-primitives/std"
]
